--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 
 services:
   front-end:
@@ -11,8 +11,8 @@ services:
   edge-router:
     image: weaveworksdemos/edge-router:0.1.1
     ports:
-      - '80:80'
-      - '8080:8080'
+      - "80:80"
+      - "8080:8080"
     cap_drop:
       - all
     cap_add:
